# dutch-workbook

./: .gitignore  deploy.sh  manage.py  pyproject.toml  run_prod.sh  word_template.md
.github/workflows/: ci.yml  deploy.yml
accounts/: forms.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
nederlandse_workbook/: ai_settings.py  asgi.py  production_settings.py  settings.py  urls.py  wsgi.py
nederlandse_workbook/utils/: openrouter.py
openrouter_module/: .env.example  README.md  bs.c  compile_c.md  free_models.txt  main.py  pyproject.toml  test.py
openrouter_module/src/openrouter_playground/: __init__.py  client.py
progress/: models.py  urls.py  views.py
progress/migrations/: 0001_initial.py
quiz/: models.py  urls.py  views.py
quiz/migrations/: 0001_initial.py
templates/: base.html
templates/progress/: dashboard.html  streak.html
templates/quiz/: history.html  home.html  question.html  results.html
templates/registration/: login.html  signup.html
templates/words/: add_example.html  add_to_category.html  add_word.html  browse.html  categories.html  category_detail.html  create_category.html  dashboard.html  delete_category.html  delete_example.html  detail.html  edit_category.html  edit_example.html  favorites.html  generate_words.html  no_cards.html  review.html
words/: category_views.py  models.py  urls.py  views.py
words/management/commands/: backup_db.py  generate_words.py  import_words.py  reset_db.py
words/migrations/: 0001_initial.py  0002_alter_word_source.py  0003_word_context_word_example.py  0004_example.py  0005_category_categorizedword.py  0006_alter_word_source.py
words/templatetags/: words_tags.py
words/tests/: test_generate_words_command.py  test_generate_words_view.py
