[project]
name = "nederlandse-workbook"
version = "0.1.0"
description = "A Dutch learning web app with PDF-based word banks"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0",
    "pdfplumber>=0.10",
    "python-dateutil>=2.8",
    "gunicorn>=21.0.0",
    "textual>=7.3.0",
    "beautifulsoup4>=4.14.3",
]

[tool.uv]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
